--- a/src/Components/Slideshow/Slideshow.css
+++ b/src/Components/Slideshow/Slideshow.css
@@ -1,8 +1,8 @@
-/* Slideshow */
+/* SLIDESHOW */
 
 .slideshow {
   overflow: hidden;
-  max-width: 100em;
+  max-width: 60%;
   margin: auto;
 }
 
@@ -20,13 +20,13 @@
 
 img {
   width: 100%;
-  max-height: 100%;
+  height: 100%;
   transition: transform 0.3s ease-in-out;
   object-fit: cover;
   aspect-ratio: 1.5/1;
 }
 
-/* Buttons */
+/* BUTTONS */
 
 .slideshowDots {
   text-align: center;
@@ -46,4 +46,21 @@ img {
 
 .slideshowDot.active {
   background-color: #214c5c;
+}
+
+/* ARTICLES */
+
+#spotlight {
+  position: absolute;
+  z-index: 4000;
+  background-color: #214c5ca0;
+  color: white;
+  padding: 10em;
+  margin-top: 1em;
+  margin-left: 1em;
+
+}
+
+#spotlight-text {
+  background: none;
 }
