--- a/src/Components/SearchBar/Searchbar.css
+++ b/src/Components/SearchBar/Searchbar.css
@@ -4,9 +4,8 @@
     display: flex;
     justify-content: center;
     padding-bottom: 2.7em;
-
+    margin-top: 3em;
 }
-
 
 .ui.input {
   width: 50%;
