--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,20 +2,24 @@
 
 .header {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     background-color: #214c5c;
 
 }
 
 #button-logo {
     text-align: center;
+    width: 20%;
+    margin-bottom: 3em;
+    margin-top: 2em;
+    
 }
 
 #logo {
-    padding-bottom: 5em;
-    width: 60%;
+    display: block;
+    width: 100%;
 }
 
 #sidebar-button {
