--- a/src/Components/Slideshow/Slideshow.css
+++ b/src/Components/Slideshow/Slideshow.css
@@ -36,10 +36,9 @@
 
 .slideshowDot {
   display: inline-block;
-  height: 10px;
-  width: 10px;
+  height: 1em;
+  width: 1em;
   border-radius: 50%;
-
   cursor: pointer;
   margin: 15px 7px 0px;
 
