--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -12,7 +12,7 @@ footer {
 ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     padding: 0px;
 }
