--- a/src/Components/UserComponents/Login/Login.css
+++ b/src/Components/UserComponents/Login/Login.css
@@ -1,11 +1,4 @@
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 62,5%;
-}
+/* LOGIN */
 
 .wrapper-login {
     height: 100vh;
