--- a/src/Components/SpotsList/SpotsList.css
+++ b/src/Components/SpotsList/SpotsList.css
@@ -62,4 +62,17 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
+/* Error Message */
   
+#no-result {
+  color: #D8000C; 
+  background-color: #FFBABA; 
+  padding: 20px;
+  margin: 15px 0;
+  border: 1px solid #D8000C;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+
