--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,11 +1,12 @@
 /* FOOTER */
 
 footer {
-
-    background-color: #214c5c;
+    
     margin-top: 3em;
+    background-color: #214c5c;
     text-align: center;
     padding: 1em;
+
 }
 
 ul {
@@ -17,6 +18,7 @@ ul {
 }
 
 li {
+    
     text-decoration: none;
     flex: 1;
 }
@@ -30,7 +32,7 @@ li {
     
     color: #c4c4c4;
     text-decoration: underline;
-    text-underline-offset: 1rem;
+    text-underline-offset: 0.5em;
     text-decoration-color: #c4c4c4;
 }
 /* FOOTER */
@@ -60,4 +62,6 @@ li {
         gap: 1em;
     }
 }
+
+
 
