--- a/src/Components/UserComponents/Profile/Profile.css
+++ b/src/Components/UserComponents/Profile/Profile.css
@@ -12,7 +12,10 @@
 
 .user-form {
     width: 25%;
+}
 
+.user-form h2 {
+    color: #214c5c;
 }
 
 .form-group {
@@ -48,12 +51,13 @@ button[type="submit"] {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #2293e4;
+    background-color: #214c5c;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 button[type="submit"]:hover {
-    background-color: #0051ff;
+    
+    background-color: rgb(217, 217, 217);
 }
