--- a/src/Components/HeaderComponents/Header/Header.css
+++ b/src/Components/HeaderComponents/Header/Header.css
@@ -16,9 +16,22 @@
 }
 
 #logo {
-    display: block;
     width: 100%;
 }
 
 
+/* MEDIA QUERRIES */
 
+@media screen and (max-width: 1024px) {
+
+    #button-logo {
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+
+    #button-logo {
+        width: 50%;
+    }
+}
