Auth Local Storage ok + code cleaning

--- a/src/Components/SearchBar/Searchbar.css
+++ b/src/Components/SearchBar/Searchbar.css
@@ -19,6 +19,12 @@
   color: #ff0000 !important;
 }
 
+.search-error {
+  text-align: center;
+  padding: 20px;
+  color: #333;
+}
+
 
 /* Media Queries */
 
