--- a/src/Components/SearchBar/Searchbar.css
+++ b/src/Components/SearchBar/Searchbar.css
@@ -2,7 +2,9 @@
 
 #searchbar-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding-bottom: 2.7em;
     margin-top: 3em;
 }
