--- a/src/Components/Spot/Spot.css
+++ b/src/Components/Spot/Spot.css
@@ -12,8 +12,8 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  padding: 20px;
+  gap: 1.5em;
+  padding: 1.5em;
   width: 90em;
   background: white;
   border: 1px solid #e3e3e3;
