--- a/src/Components/UserComponents/Profile/Profile.css
+++ b/src/Components/UserComponents/Profile/Profile.css
@@ -7,7 +7,6 @@
     align-items: center;
     height: 80vh;
     width: 100%;
-    
 }
 
 .user-form {
@@ -58,6 +57,24 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    
     background-color: rgb(217, 217, 217);
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1200px) {
+    .user-form {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .user-form {
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .user-form {
+        width: 75%;
+    }
 }
