comments fetch from DB ok

--- a/src/Components/Spot/Spot.css
+++ b/src/Components/Spot/Spot.css
@@ -27,7 +27,7 @@
   width: 100%;
 }
 
-#spot-details-container h2 {
+#spot-details-title {
   background: #e3e3e3;
   margin: 0;
   padding: 1em 2em 1em 2em;
