theme toggle done + new main color

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,12 +1,18 @@
 /* FOOTER */
 
-footer {
-    
+.footer,
+.footer-skateboard  {
     margin-top: 3em;
-    background-color: #214c5c;
     text-align: center;
     padding: 1em;
+    background-color: #333;
+}
 
+.footer-snowboard {
+    margin-top: 3em;
+    text-align: center;
+    padding: 1em;
+    background-color: #214c5c;
 }
 
 ul {
