--- a/src/Components/UserComponents/Favoris/Favoris.css
+++ b/src/Components/UserComponents/Favoris/Favoris.css
@@ -10,7 +10,7 @@
 }
 
 .favorite-spots h2 {
-    color: #214c5c;
+    color: #897b68;
     text-align: center;
     margin-bottom: 1em;
 }
@@ -54,7 +54,7 @@
 
 .spot-info h3 {
     margin: 0;
-    color: #214c5c;
+    color: #897b68;
 }
 
 .spot-info p {
