--- a/src/Components/SpotsList/SpotsList.css
+++ b/src/Components/SpotsList/SpotsList.css
@@ -76,14 +76,14 @@
 #spotslist-button-detail {
   transition: 0.2s ease-in-out;
   color: white;
-  background-color: #214c5c;
+  background-color: #897b68;
   border-radius: 0.5em;
   border-color: transparent;
   padding: 1em;
 }
 
 #spotslist-button-detail:hover {
-  background-color: #333;
+  background-color: #e3e3e3;
 }
 
 /* Styles for filter boxes */
