--- a/src/Components/UserComponents/Profile/Profile.css
+++ b/src/Components/UserComponents/Profile/Profile.css
@@ -7,14 +7,19 @@
     align-items: center;
     height: 80vh;
     width: 100%;
+    
 }
 
 .user-form {
     width: 25%;
+    padding: 1em;
+    border: #ffffff 1px solid;
+    border-radius: 0.5em;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
 .user-form h2 {
-    color: #214c5c;
+    color: #897b68;
 }
 
 .form-group {
@@ -32,7 +37,7 @@
 .form-group input[type="file"] {
     width: 100%;
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid #e3e3e3;
     border-radius: 4px;
     box-sizing: border-box;
 }
@@ -50,14 +55,14 @@ button[type="submit"] {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #214c5c;
+    background-color: #897b68;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 button[type="submit"]:hover {
-    background-color: rgb(217, 217, 217);
+    background-color: #e3e3e3;
 }
 
 /* MEDIA QUERIES */
