--- a/src/Components/StarRating/StarRating.css
+++ b/src/Components/StarRating/StarRating.css
@@ -1,9 +1,12 @@
+/*STAR DESIGN*/
+
 .star-rating {
     direction: rtl;
     font-size: 150%;
     position: relative;
     unicode-bidi: bidi-override;
     display: inline-block;
+
 }
 
 .star {
@@ -18,5 +21,5 @@
     white-space: nowrap;
     overflow: hidden;
     direction: ltr;
-    color: rgb(251, 29, 0);
+    color: #e3e3e3;
 }
