--- a/src/Components/UserComponents/Profile/Profile.css
+++ b/src/Components/UserComponents/Profile/Profile.css
@@ -23,6 +23,10 @@
 }
 
 .form-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
     margin-bottom: 15px;
 }
 
@@ -42,12 +46,12 @@
     box-sizing: border-box;
 }
 
-.form-group img {
+.profile-dashboard-img {
     display: block;
     margin-top: 10px;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
     border-radius: 50%;
+    margin-bottom: 1em;
 }
 
 button[type="submit"] {
